<resources>
    <string name="app_name">Jot n\' Roll</string>
    <string name="appTitle">Jot n\' Roll</string>
    <string name="createdBy">Created by:\nOwen Kyle, Liangco\nSamuel, Lagamia\nVincent, Adduru\nJose, Bonnevie</string>
    <string name="proceed">"Proceed "</string>
    <string name="loginTitle">Login to Kotlin\'s Diary</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="loginLabel">Login</string>
    <string name="signupLabel">Sign up</string>
    <string name="createAccountTitle">Create Account</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="userName">Username</string>
    <string name="eMail">Email</string>
    <string name="passWord">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="backButton">Back</string>
    <string name="appLogo">Jot n\' Roll</string>
    <string name="about">The developers behind the Jot n\' Roll app:</string>
    <string name="dev1">Adduru, Genesis Vincent D.</string>
    <string name="dev2">Bonnevie, Jose Achilles S.</string>
    <string name="dev3">Lagamia, Samuel Aecel A.</string>
    <string name="dev4">Liangco, Owen Kyle G.</string>
    <string name="vince">Backend</string>
    <string name="jose">Database</string>
    <string name="owen">Frontend</string>
    <string name="sam">Frontend\n</string>
    <string name="Sam">Designed the logo icon and maintained the dashboard, diary entry, and diary screen.</string>
    <string name="Owen">"Created the layout design for the screens and maintained the first screen, login and sign up screen."</string>
    <string name="Jose">Created the database for the application’s authentication and store data.</string>
    <string name="Vince">Created the logistics of the application, handling the inputs and outputs.</string>
    <string name="dateval">Date (e.g. July 20, 2025)</string>
    <string name="your">Your Diary Entries</string>
    <string name="beck">back</string>
    <string name="newdiary">New Diary Entry</string>
    <string name="submit">Submit Entry</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="welcome">Welcome to Your Diary!</string>
    <string name="diarytitle">Diary Title\n</string>
    <string name="write">Write your diary here...</string>
</resources>